CIRC-2059 Tests - 3
Co-authored-by: Roman Barannyk <53909129+roman-barannyk@users.noreply.github.com>